# agent_crew

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.gemini/: settings.json
docs/: architecture.md  requirements.md  test_plan.md
scripts/: stress_test_50_runs.sh
src/agent_crew/: _stress_log_analyzer.py  anomaly.py  cli.py  discussion.py  fallback.py  github.py  instructions.py  log_viewer.py  loop.py  mcp_server.py  notify.py  pipeline.py  protocol.py  queue.py  server.py  session.py  setup.py  triage.py
tests/: conftest.py
tests/e2e/: test_e2e_discussion.py  test_e2e_gates.py  test_e2e_loop.py  test_e2e_recovery.py  test_e2e_setup.py  test_e2e_triage.py
tests/integration/: test_auto_review_integration.py  test_discussion_integration.py  test_http_mcp_parity.py  test_loop_integration.py  test_persistence_integration.py  test_server_integration.py  test_session_integration.py  test_triage_integration.py
tests/stress/: _server_launcher.py  test_stress_50runs.py  test_stress_50runs.sh
tests/unit/: test_anomaly.py  test_bug_188_reviewer_override.py  test_bugs_152_167_159.py  test_bugs_154_151_155_158_159.py  test_bugs_155_166_169_170.py  test_bugs_161_168_171.py  test_bugs_162_163_164_165_172_145.py  test_cli.py  test_cli_idle_detection.py  test_codex_auth_bootstrap.py  test_delivery_flag.py  test_discussion.py  test_dispatcher_discuss.py  test_fallback.py  test_gemini_session_cap.py  test_instruction_paths.py  test_instructions.py  test_issue_187_189.py  test_issue_193_log_rotation.py  test_issue_195_recover_liveness.py  test_log_viewer.py  (+27 more)
(+3 files in other folders)
