[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_crew"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "click",
]

[project.scripts]
crew = "agent_crew.cli:crew"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
]
